# spark_schemanator

./: pyproject.toml
src/spark_schemanator/: main.py
tests/: conftest.py  test_main.py
