[project]
name = "spark_schemanator"
authors = [
    {name="ed cuss"},
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.1"
dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "hypothesis",    
]
lint = [
    "pre-commit",
    "ruff",
]
dev = [
    "spark_schemanator[test,lint]",
]

[tool.coverage.run]
branch = true
source=["src"]
omit=[
    "*_logger.py",
    "*config.py",
]

[tool.coverage.report]
show_missing=true