[project]
name = "spark_schemanator"
authors = [
    {name="ed cuss"},
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.1"
dependencies = [
    "faker>=35.2.0",
    "numpy>=1.24.4",
    "pyspark>=3.5.4",
]

[tool.coverage.run]
branch = true
source=["src"]
omit=[
    "*_logger.py",
    "*config.py",
]

[tool.coverage.report]
show_missing=true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "numpy>=1.24.4",
    "pre-commit>=3.5.0",
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.4",
]
